syntax = "proto3";

package model.test;

option java_multiple_files = true;
option java_outer_classname = "EmployeeProto";
option java_package = "com.volmyr.proto.model.test";

message Address {
  string country = 1;
  string city = 2;
  string address = 3;
}

message Employee {
  string first_name = 1;
  string last_name = 2;
  Address main_address = 3;
  repeated Address addresses = 4;
}
